correcting align's

--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ label{
 .sub_checkbox {
     display: inline-block;
     vertical-align: middle;
-    margin-left: 0px;
+    margin-left: 4px;
 }
 
 label{
